<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.2</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>

    <!-- The Basics Settings -->
    <groupId>com.heyrudy</groupId>
    <artifactId>todo-backend-clean-architecture</artifactId>
    <version>0.1-SNAPSHOT</version>
    <name>todo-backend-clean-architecture</name>
    <description>This is a backend for todo app</description>

    <!-- Project's properties -->
    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <org.mybatis.version>2.1.4</org.mybatis.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mybatis.spring.boot</groupId>
            <artifactId>mybatis-spring-boot-starter</artifactId>
            <version>${org.mybatis.version}</version>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <version>2.5.4</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <!-- Source control Settings -->
    <scm>
        <connection>scm:git:git@github.com:heyrudy/todo-backend-clean-architecture.git</connection>
        <developerConnection>scm:git:git@github.com:heyrudy/todo-backend-clean-architecture.git
        </developerConnection>
        <tag>HEAD</tag>
        <url>scm:git:git@github.com:heyrudy/todo-backend-clean-architecture.git</url>
    </scm>

    <!-- Deployment & Release Settings -->
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub heyrudy Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/heyrudy/todo-backend-clean-architecture</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <!-- Profile Settings -->
    <!--    <profiles>-->
    <!--        <profile>-->
    <!--            <id>default</id>-->
    <!--            <activation>-->
    <!--                <activeByDefault>true</activeByDefault>-->
    <!--            </activation>-->
    <!--            <properties>-->
    <!--                <jacoco.disabled>false</jacoco.disabled>-->
    <!--                <skip.integration.tests>true</skip.integration.tests>-->
    <!--                <skip.unit.tests>false</skip.unit.tests>-->
    <!--            </properties>-->
    <!--        </profile>-->

    <!--        <profile>-->
    <!--            <id>integration-test</id>-->
    <!--            <properties>-->
    <!--                <skip.integration.tests>false</skip.integration.tests>-->
    <!--                <skip.unit.tests>true</skip.unit.tests>-->
    <!--            </properties>-->
    <!--        </profile>-->

    <!--        <profile>-->
    <!--            <id>all-tests</id>-->
    <!--            <properties>-->
    <!--                <skip.integration.tests>false</skip.integration.tests>-->
    <!--                <skip.unit.tests>false</skip.unit.tests>-->
    <!--            </properties>-->
    <!--        </profile>-->

    <!--        <profile>-->
    <!--            <id>release</id>-->
    <!--            <properties>-->
    <!--                <spring.profiles.active>release</spring.profiles.active>-->
    <!--            </properties>-->
    <!--            <build>-->
    <!--                <plugins>-->
    <!--                    <plugin>-->
    <!--                        <groupId>org.apache.maven.plugins</groupId>-->
    <!--                        <artifactId>maven-enforcer-plugin</artifactId>-->
    <!--                        <executions>-->
    <!--                            <execution>-->
    <!--                                <id>only-releases</id>-->
    <!--                                <goals>-->
    <!--                                    <goal>enforce</goal>-->
    <!--                                </goals>-->
    <!--                                <configuration>-->
    <!--                                    <rules>-->
    <!--                                        <requireReleaseVersion>-->
    <!--                                            <message>You have to release your application. No *-SNAPSHOT is allowed-->
    <!--                                            </message>-->
    <!--                                        </requireReleaseVersion>-->
    <!--                                        <requireReleaseDeps>-->
    <!--                                            <message>You have to release your dependency. No *-SNAPSHOT is allowed-->
    <!--                                            </message>-->
    <!--                                        </requireReleaseDeps>-->
    <!--                                    </rules>-->
    <!--                                    <fail>true</fail>-->
    <!--                                </configuration>-->
    <!--                            </execution>-->
    <!--                        </executions>-->
    <!--                    </plugin>-->
    <!--                </plugins>-->
    <!--            </build>-->
    <!--        </profile>-->

    <!--        <profile>-->
    <!--            <id>dev</id>-->
    <!--            <activation>-->
    <!--                <activeByDefault>true</activeByDefault>-->
    <!--            </activation>-->
    <!--            <properties>-->
    <!--                <spring.profiles.active>dev</spring.profiles.active>-->
    <!--            </properties>-->
    <!--        </profile>-->

    <!--        <profile>-->
    <!--            <id>test</id>-->
    <!--            <properties>-->
    <!--                <spring.profiles.active>test</spring.profiles.active>-->
    <!--            </properties>-->
    <!--        </profile>-->

    <!--        <profile>-->
    <!--            <id>prod</id>-->
    <!--            <properties>-->
    <!--                <spring.profiles.active>prod</spring.profiles.active>-->
    <!--            </properties>-->
    <!--        </profile>-->
    <!--    </profiles>-->

</project>